--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,8 @@
 // NAVBAR //
 .navbar {
   display: flex;
-  background-color: #fefefe8f;
+  background-color: #abe9cd;
+  background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
   height: 50px;
 
   .icon-image {
